@@ -30,6 +30,7 @@ define("HOST_GROUPING_DATA_QUERY_INDEX", 2);
 define("TREE_ORDERING_NONE", 1);
 define("TREE_ORDERING_ALPHABETIC", 2);
 define("TREE_ORDERING_NUMERIC", 3);
+define("TREE_ORDERING_NATURAL", 4);
 
 define("TREE_ITEM_TYPE_HEADER", 1);
 define("TREE_ITEM_TYPE_GRAPH", 2);
